Add include directories within CMake module instead of outside

--- a/src/glad/CMakeLists.txt
+++ b/src/glad/CMakeLists.txt
@@ -3,5 +3,5 @@ add_library(glad
   include/glad/glad.h
   )
 
-target_include_directories(glad PRIVATE include)
+target_include_directories(glad PUBLIC include)
 
