--- a/src/imgui/CMakeLists.txt
+++ b/src/imgui/CMakeLists.txt
@@ -5,10 +5,18 @@ add_library(imgui
   imgui_draw.cpp
   imgui_tables.cpp
   imgui_internal.h
+  backends/imgui_impl_opengl3.cpp
+  backends/imgui_impl_opengl3.h
+  backends/imgui_impl_glfw.cpp
+  backends/imgui_impl_glfw.h
+  )
+
+target_link_libraries(imgui
+  glad
   )
 
 target_include_directories(imgui
   PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
-  )
+)
 
