Separate out rendering code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,12 +10,14 @@ target_link_libraries(main
     glad
     imgui
     #pthread ?
+    render
     )
   
 add_subdirectory(glad)
 add_subdirectory(imgui)
 add_subdirectory(linmath)
 add_subdirectory(stb_image)
+add_subdirectory(render)
 
 add_custom_command(TARGET main POST_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy_directory
