Add movable camera

--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -1,3 +1,18 @@
+add_library(camera
+  camera.cpp
+  camera.h
+  )
+
+target_link_libraries(camera
+  PRIVATE
+    glm
+    )
+
+ target_include_directories(camera
+   PRIVATE
+     ${CMAKE_SOURCE_DIR}/src
+   )
+
 add_library(render
   render.cpp
   render.h
@@ -12,6 +27,8 @@ target_link_libraries(render
     imgui
     stb_image
     glm
+  PUBLIC
+    camera
     )
 
  target_include_directories(render
